--- a/tst_wp/templates/header.html
+++ b/tst_wp/templates/header.html
@@ -8,6 +8,7 @@
         <ul>
           <li><a href="/menu">home</a></li>
           <li><a href="/crud">Serveurs</a></li>
+          <li><a href="/css_crud">Serveurs CSS</a></li>
           <li><a href="/menu/about">About</a></li>
         </ul>
       </nav>
